登录逻辑修改

--- a/client/components/swiper/index.wxml
+++ b/client/components/swiper/index.wxml
@@ -2,7 +2,7 @@
   <block wx:for="{{imgUrls}}" wx:key="index">
     <swiper-item>
       <navigator url="/pages/product/index?id={{item.id}}">
-        <image class="swiper-img" mode="aspectFill" src="/images/1.jpg" />
+        <image class="swiper-img" mode="aspectFill" src="{{item.image}}" />
       </navigator>
     </swiper-item>
   </block>
