--- a/client/pages/category/index.wxss
+++ b/client/pages/category/index.wxss
@@ -3,12 +3,12 @@
 	width: 100vw;
 	display: flex;
 	flex-direction: row;
-	background-color: #fafafa;
+	background-color: #f7f8fa;
 }
 
 .slide-bar {
 	height: 100vh;
-	width: 200rpx;
+	width: 180rpx;
 	border-right: 2rpx solid #e6e6e6;
 }
 
