--- a/client/pages/cart/index.wxml
+++ b/client/pages/cart/index.wxml
@@ -9,4 +9,6 @@
   </van-checkbox-group>
   <van-submit-bar price="{{ totalPrice }}" disabled="{{ !checkedGoods.length }}" button-text="{{ submitBarText }}" bind:submit="onSubmit"></van-submit-bar>
 </view>
-<van-empty wx:else description="您还没有添加商品" />
+<van-empty wx:else description="购物车空空如也~">
+  <van-button round color="#ee0a24" bind:click="onClickBtn">去逛逛</van-button>
+</van-empty>
