--- a/client/pages/category/index.wxml
+++ b/client/pages/category/index.wxml
@@ -1,16 +1,5 @@
 <view class="container">
-  <view class="slide-bar">
-    <scroll-view style="height:100vh;" scroll-y>
-      <van-sidebar active-key="{{ categoryIndex }}">
-        <van-sidebar-item wx:for="{{categoryList}}" bind:click="onChange" wx:key="index" title="{{item.category_name}}" />
-      </van-sidebar>
-    </scroll-view>
-  </view>
-  <view class="slide-content">
-    <scroll-view style="height:100vh;" scroll-y>
-      <van-grid column-num="3">
-        <van-grid-item url="/pages/productList/index" icon="{{item.icon}}" text="{{item.name}}" wx:for="{{ categoryList[categoryIndex].subCategory }}" wx:key="index" />
-      </van-grid>
-    </scroll-view>
-  </view>
+  <van-grid>
+    <van-grid-item url="/pages/productList/index" icon="{{item.icon?item.icon:'photo-o'}}" text="{{item.name}}" wx:for="{{ categoryList }}" wx:key="index" />
+  </van-grid>
 </view>
