--- a/client/pages/category/index.wxss
+++ b/client/pages/category/index.wxss
@@ -1,18 +1,5 @@
 .container {
-	height: 100vh;
-	width: 100vw;
-	display: flex;
-	flex-direction: row;
-	background-color: #f7f8fa;
-}
-
-.slide-bar {
-	height: 100vh;
-	width: 180rpx;
-	border-right: 2rpx solid #e6e6e6;
-}
-
-.slide-content {
-	height: 100vh;
-	flex: 1;
+	width: 750rpx;
+	background-color: #fff;
+	border-bottom: 1rpx solid #f5f5f5;
 }
