--- a/client/pages/index/index.wxss
+++ b/client/pages/index/index.wxss
@@ -1,21 +1,11 @@
-.contianer {
+.container {
 	width: 750rpx;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #f5f6f7;
 }
 
-.swiper-container {
-	height: 360rpx;
-	width: 100%;
-}
-
-.notice-bar {
-	margin: 20rpx 0;
-}
-
-.product-item {
-	margin: 0 0 20rpx;
-}
-
-.van-cell__title,
-.van-cell__value {
-	color: #ee0a24;
+.product-list {
+	width: 670rpx;
 }
