--- a/client/pages/productList/index.wxml
+++ b/client/pages/productList/index.wxml
@@ -1,15 +1,7 @@
 <view class="container">
-  <van-dropdown-menu active-color="#ee0a24">
-    <van-dropdown-item value="{{ value1 }}" options="{{ option1 }}" />
-    <van-dropdown-item value="{{ value2 }}" options="{{ option2 }}" />
-  </van-dropdown-menu>
   <view class="product-list">
-    <view wx:for="{{4}}" wx:key="index" class="product-item">
-      <van-card tag="标签" price="10.00" origin-price="12.00" desc="描述信息" title="商品标题" thumb="/images/1.jpg">
-        <view slot="footer">
-          <van-button size="mini" icon="shopping-cart-o" type="danger" />
-        </view>
-      </van-card>
+    <view wx:for="{{productList}}" wx:key="index" class="product-item">
+      <product-item product-info="{{item}}"></product-item>
     </view>
   </view>
 </view>
