--- a/client/pages/productList/index.wxss
+++ b/client/pages/productList/index.wxss
@@ -1,3 +1,11 @@
 .container {
-	background-color: #fafafa;
+	width: 750rpx;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #f5f6f7;
+}
+
+.product-list {
+	width: 670rpx;
 }
