--- a/client/pages/cart/index.wxml
+++ b/client/pages/cart/index.wxml
@@ -1,14 +1,19 @@
-<view wx:if="{{false}}" class="container">
-  <van-checkbox-group class="card-goods" value="{{ checkedGoods }}" bind:change="onChange">
-    <van-checkbox class="card-goods__item" wx:for="{{ goods }}" wx:key="index" name="{{ item.id }}">
-      <van-swipe-cell right-width="{{ 80 }}">
-        <van-card title="{{ item.title }}" desc="{{ item.desc }}" num="{{ item.num }}" price="{{ item.formatPrice }}" thumb="{{ item.thumb }}" />
-        <view class="delete-btn" slot="right">删除</view>
-      </van-swipe-cell>
-    </van-checkbox>
-  </van-checkbox-group>
-  <van-submit-bar price="{{ totalPrice }}" disabled="{{ !checkedGoods.length }}" button-text="{{ submitBarText }}" bind:submit="onSubmit"></van-submit-bar>
+<view class="container">
+  <view class="cart-manage" bind:tap="onToggleStatus">{{status?'管理':'完成'}}</view>
+  <view class="product-list">
+    <van-checkbox-group value="{{result}}" bind:change="onListChange">
+      <block wx:for="{{productList}}" wx:key="index">
+        <van-checkbox value="{{checked}}" bind:click="onToggleItem" data-id="{{index}}" custom-class="product-item" label-class="product-info" name="{{item.id}}">
+          <van-image width="100" height="100" src="https://img.yzcdn.cn/vant/cat.jpeg" />
+          <view class="product-detail">
+            <view class="product-price">¥100</view>
+            <view class="product-price">x1</view>
+          </view>
+        </van-checkbox>
+      </block>
+    </van-checkbox-group>
+  </view>
+  <van-submit-bar wx:if="{{status}}" price="{{ totalPrice }}" disabled="{{ !productList.length }}" button-text="结算" bind:submit="onSubmit"></van-submit-bar>
+  <van-submit-bar wx:if="{{!status}}" disabled="{{ !productList.length }}" button-text="删除" bind:submit="onSubmit"></van-submit-bar>
 </view>
-<van-empty wx:else description="购物车空空如也~">
-  <van-button round color="#ee0a24" bind:click="onClickBtn">去逛逛</van-button>
-</van-empty>
+<!-- <van-empty wx:else description="购物车空空如也~"></van-empty> -->
