--- a/client/pages/index/index.wxss
+++ b/client/pages/index/index.wxss
@@ -3,9 +3,13 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: #f5f6f7;
+	background-color: #f2f2f2;
 }
 
 .product-list {
+	width: 670rpx;
+}
+
+.hard-line {
 	width: 670rpx;
 }
