--- a/client/components/product-item/index.wxss
+++ b/client/components/product-item/index.wxss
@@ -19,10 +19,10 @@
 	height: 700rpx;
 	position: absolute;
 	right: 30rpx;
-	bottom: 50rpx;
+	top: 50rpx;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-evenly;
+	/* justify-content: space-evenly; */
 	align-items: center;
 }
 
