--- a/client/pages/order/index.wxml
+++ b/client/pages/order/index.wxml
@@ -1,2 +1,17 @@
-<!--pages/order/index.wxml-->
-<text>pages/order/index.wxml</text>
+<view class="container">
+  <van-cell-group>
+    <van-cell title="商品列表" />
+    <van-card custom-class="product-card" num="2" price="2.00" desc="描述信息" title="商品标题" thumb="https://img.yzcdn.cn/vant/cat.jpeg" />
+    <van-card custom-class="product-card" num="2" price="2.00" desc="描述信息" title="商品标题" thumb="https://img.yzcdn.cn/vant/cat.jpeg" />
+  </van-cell-group>
+  <van-cell-group>
+    <block wx:if="{{userAddress}}">
+      <van-cell title="收货人：{{userAddress.userName}}" />
+      <van-cell title="联系电话：{{userAddress.telNumber}}" />
+      <van-cell title="详细地址：{{userAddress.detailAddress}}" />
+    </block>
+    <van-cell wx:else title="添加收货地址" icon="add-o" bind:click="bindAddAddress" />
+    <van-field label="备注" placeholder="如需备注请输入" value="{{ value }}" bind:change="onChange" />
+  </van-cell-group>
+  <van-submit-bar price="{{100}}" button-text="提交订单" bind:submit="onSubmit"></van-submit-bar>
+</view>
