--- a/client/pages/orderList/index.wxml
+++ b/client/pages/orderList/index.wxml
@@ -5,14 +5,6 @@
     </van-tabs>
   </view>
   <view class="content">
-    <view class="order-item">
-      <van-cell title="单元格" value="内容" border="{{false}}" />
-      <van-row>
-        <van-col span="8" offset="1">
-          <van-image width="100" height="100" src="https://img.yzcdn.cn/vant/cat.jpeg" />
-        </van-col>
-        <van-col span="8"></van-col>
-      </van-row>
-    </view>
+    <order-item></order-item>
   </view>
 </view>
